refactor: resolve target HEAD via GitLab API instead of shallow clone