@@ -44,7 +44,6 @@ public class GitLabGateway implements CodeRepositoryGateway {
     @Value("${app.workspace.dir:/tmp/mr-rag-workspace}")
     private String workspaceDir;
 
-
     private <T> T gitLabApi(String token, GitLabApiAction<T> action) {
         GitLabApi api = (token == null || token.equals(defaultToken))
                 ? gitLabApi
@@ -53,10 +52,7 @@ public class GitLabGateway implements CodeRepositoryGateway {
             return action.execute(api);
         } finally {
             if (api != gitLabApi) {
-                try {
-                    api.close();
-                } catch (Exception ignored) {
-                }
+                try { api.close(); } catch (Exception ignored) {}
             }
         }
     }
@@ -66,8 +62,11 @@ public class GitLabGateway implements CodeRepositoryGateway {
         T execute(GitLabApi api);
     }
 
+    // -----------------------------------------------------------------------
+
     @Override
-    public Path cloneProject(String namespace, String repo, String branch, String commit, boolean force, String token) {
+    public Path cloneProject(String namespace, String repo, String branch,
+                             String commit, boolean force, String token) {
         if (commit == null)
             commit = getLastCommit(namespace, repo, branch, token).getId();
 
@@ -75,17 +74,17 @@ public class GitLabGateway implements CodeRepositoryGateway {
             token = defaultToken;
 
         Git git = null;
-        Path path = Path.of(workspaceDir, getClonePath(namespace, repo, branch, commit, token));
-        if (path.toFile().exists() && !force)
-            return path;
-        else if (path.toFile().exists())
-            deleteDirectory(path.toFile());
+        Path path = Path.of(workspaceDir,
+                getClonePath(namespace, repo, branch, commit, token));
+        if (path.toFile().exists() && !force) return path;
+        else if (path.toFile().exists()) deleteDirectory(path.toFile());
 
-        log.debug("Beginning clone project '{}/{}' for branch '{}', commit {}", namespace, repo, branch, commit);
+        log.debug("Cloning '{}/{}' branch='{}' commit={}", namespace, repo, branch, commit);
         try {
             URIish uri = new URIish(getProjectUrl(defaultUrl, namespace, repo));
             git = Git.cloneRepository()
-                    .setCredentialsProvider(new UsernamePasswordCredentialsProvider("oauth2", token))
+                    .setCredentialsProvider(
+                            new UsernamePasswordCredentialsProvider("oauth2", token))
                     .setURI(uri.toString())
                     .setDirectory(path.toFile())
                     .setBranch(branch)
@@ -94,74 +93,100 @@ public class GitLabGateway implements CodeRepositoryGateway {
                     .call();
 
             if (commit != null && !commit.isBlank())
-                git.checkout()
-                        .setName(commit)
-                        .call();
-            log.debug("End clone project '{}/{}' for branch '{}', commit {}", namespace, repo, branch, commit);
+                git.checkout().setName(commit).call();
+
+            log.debug("Cloned '{}/{}' branch='{}' commit={}", namespace, repo, branch, commit);
             return path;
         } catch (GitAPIException | URISyntaxException e) {
-            log.error("Failed clone project '{}/{}' for branch '{}', commit {}", namespace, repo, branch, commit);
-            throw new CodeRepositoryException("Failed to clone project '%s/%s', branch '%s', commit '%s', path '%s'".formatted(namespace, repo, branch, commit, path), e);
+            throw new CodeRepositoryException(
+                    "Failed to clone project '%s/%s', branch '%s', commit '%s'"
+                            .formatted(namespace, repo, branch, commit), e);
         } finally {
             if (git != null) git.close();
         }
     }
 
-
     @Override
-    public MergeRequest getMergeRequest(String namespace, String repo, long mrIid, String token) {
+    public String getBranchHeadSha(String namespace, String repo,
+                                   String branch, String token) {
         return gitLabApi(token, api -> {
             try {
-                String projectPath = "%s/%s".formatted(namespace, repo);
-                return api.getMergeRequestApi().getMergeRequest(projectPath, mrIid);
+                Project project = api.getProjectApi()
+                        .getProject(namespace + "/" + repo);
+                Commit head = api.getRepositoryApi()
+                        .getBranch(project.getId(), branch)
+                        .getCommit();
+                String sha = head.getId();
+                log.debug("HEAD of '{}/{}' branch='{}': {}", namespace, repo, branch, sha);
+                return sha;
             } catch (GitLabApiException e) {
-                log.error("Failed to get merge request '{}' project '{}/{}'", mrIid, namespace, repo);
-                throw new CodeRepositoryException("Failed to get merge request '%s' in project '%s/%s'".formatted(mrIid, namespace, repo), e);
+                throw new CodeRepositoryException(
+                        "Failed to get HEAD SHA for '%s/%s' branch '%s'"
+                                .formatted(namespace, repo, branch), e);
             }
         });
     }
 
     @Override
-    public List<Diff> getMrDiffs(String namespace, String repo, long mrIid, String token) {
+    public MergeRequest getMergeRequest(String namespace, String repo,
+                                        long mrIid, String token) {
         return gitLabApi(token, api -> {
             try {
-                String projectPath = "%s/%s".formatted(namespace, repo);
-                return api.getMergeRequestApi().getMergeRequestChanges(projectPath, mrIid).getChanges();
-
+                return api.getMergeRequestApi()
+                        .getMergeRequest("%s/%s".formatted(namespace, repo), mrIid);
             } catch (GitLabApiException e) {
-                log.error("Failed to get diffs for merge request '{}' project '{}/{}'", mrIid, namespace, repo);
-                throw new CodeRepositoryException("Failed to get diffs for merge request '%s' in project '%s/%s'".formatted(mrIid, namespace, repo), e);
+                throw new CodeRepositoryException(
+                        "Failed to get merge request '%s' in project '%s/%s'"
+                                .formatted(mrIid, namespace, repo), e);
             }
         });
     }
 
     @Override
-    public String getFileContent(String namespace, String repo, String branch, String filePath, String token) {
+    public List<Diff> getMrDiffs(String namespace, String repo,
+                                 long mrIid, String token) {
+        return gitLabApi(token, api -> {
+            try {
+                return api.getMergeRequestApi()
+                        .getMergeRequestChanges("%s/%s".formatted(namespace, repo), mrIid)
+                        .getChanges();
+            } catch (GitLabApiException e) {
+                throw new CodeRepositoryException(
+                        "Failed to get diffs for merge request '%s' in project '%s/%s'"
+                                .formatted(mrIid, namespace, repo), e);
+            }
+        });
+    }
+
+    @Override
+    public String getFileContent(String namespace, String repo,
+                                 String branch, String filePath, String token) {
         return gitLabApi(token, api -> {
             String projectPath = "%s/%s".formatted(namespace, repo);
             try (InputStream is = api.getRepositoryFileApi()
                     .getRawFile(projectPath, branch, filePath)) {
                 return new String(is.readAllBytes(), StandardCharsets.UTF_8);
             } catch (IOException | GitLabApiException e) {
-                log.error("Failed to get content file project '{}/{}', branch '{}', filepath '{}'", namespace, repo, branch, filePath);
-                throw new CodeRepositoryException("Failed to get content file project '%s/%s', branch '%s', filePath = '%s'".formatted(namespace, repo, branch, filePath), e);
+                throw new CodeRepositoryException(
+                        "Failed to get file '%s' in '%s/%s' branch '%s'"
+                                .formatted(filePath, namespace, repo, branch), e);
             }
         });
     }
 
-
     @Override
-    public List<TreeItem> getRepositoryTree(String namespace, String repo, String branch, String token) {
+    public List<TreeItem> getRepositoryTree(String namespace, String repo,
+                                            String branch, String token) {
         return gitLabApi(token, api -> {
             try {
-                String projectPath = "%s/%s".formatted(namespace, repo);
                 List<org.gitlab4j.api.models.TreeItem> tree = api
                         .getRepositoryApi()
-                        .getTree(projectPath, null, branch, true);
+                        .getTree("%s/%s".formatted(namespace, repo), null, branch, true);
                 return TreeItem.listFrom(tree);
             } catch (GitLabApiException e) {
-                log.error("Failed get repository tree project '{}/{}', branch '{}'", namespace, repo, branch);
-                throw new CodeRepositoryException("Failed get repository tree project '%s/%s', branch '%s'".formatted(namespace, repo, branch), e);
+                throw new CodeRepositoryException(
+                        "Failed to get repository tree '%s/%s' branch '%s'"
+                                .formatted(namespace, repo, branch), e);
             }
         });
     }
@@ -171,16 +196,22 @@ public class GitLabGateway implements CodeRepositoryGateway {
         try {
             deleteDirectory(repoDir.toFile());
         } catch (Exception e) {
-            throw new CodeRepositoryException("Failed to cleanup repository directory " + repoDir, e);
+            throw new CodeRepositoryException(
+                    "Failed to cleanup repository directory " + repoDir, e);
         }
     }
+
+    // -----------------------------------------------------------------------
+    // Internal helpers
+    // -----------------------------------------------------------------------
 
     private Long getProjectId(String namespace, String repo, String token) {
         return gitLabApi(token, api -> {
             try {
                 return api.getProjectApi().getProject(namespace, repo).getId();
             } catch (GitLabApiException e) {
-                throw new CodeRepositoryException("Failed get project '%s/%s'".formatted(namespace, repo), e);
+                throw new CodeRepositoryException(
+                        "Failed get project '%s/%s'".formatted(namespace, repo), e);
             }
         });
     }
@@ -193,70 +224,60 @@ public class GitLabGateway implements CodeRepositoryGateway {
         File[] files = dir.listFiles();
         if (files == null) return;
         for (File file : files) {
-            if (file.isDirectory()) {
-                deleteDirectory(file);
-            } else {
-                if (!file.delete()) {
-                    throw new RuntimeException("Failed to delete file: " + file);
-                }
-            }
+            if (file.isDirectory()) deleteDirectory(file);
+            else if (!file.delete())
+                throw new RuntimeException("Failed to delete file: " + file);
         }
-        if (!dir.delete()) {
+        if (!dir.delete())
             throw new RuntimeException("Failed to delete directory: " + dir);
-        }
     }
 
-    public String getClonePath(
-            String namespace,
-            String repo,
-            String branch,
-            String commitId,
-            String token
-    ) {
+    public String getClonePath(String namespace, String repo,
+                               String branch, String commitId, String token) {
         if (commitId == null)
             commitId = getLastCommit(namespace, repo, branch, token).getId();
-
         String timestamp = getCommitTimestampDirName(namespace, repo, commitId, token);
-        String branchSafe = branch.replaceAll("[^a-zA-Z0-9._-]", "_");
-        String commitSafe = commitId.substring(0, Math.min(7, commitId.length()));
-
-        // namespace: заменяем '/' на подчёркивания, чтобы не было пути в пути
+        String branchSafe  = branch.replaceAll("[^a-zA-Z0-9._-]", "_");
+        String commitSafe  = commitId.substring(0, Math.min(7, commitId.length()));
         String namespaceSafe = namespace.replaceAll("[/\\\\:*?\"<>|]", "_");
-
-        return String.format("%s_%s__%s__%s__%s", namespaceSafe, repo, timestamp, branchSafe, commitSafe);
+        return "%s_%s__%s__%s__%s".formatted(namespaceSafe, repo, timestamp, branchSafe, commitSafe);
     }
 
-    public String getCommitTimestampDirName(
-            String namespace,
-            String repo,
-            String commitId,
-            String token
-    ) {
+    public String getCommitTimestampDirName(String namespace, String repo,
+                                            String commitId, String token) {
         Commit commit = getCommit(namespace, repo, commitId, token);
         Instant instant = commit.getCommittedDate().toInstant();
         return instant.atZone(ZoneOffset.UTC)
                 .format(DateTimeFormatter.ofPattern("yyyy-MM-dd_HH-mm-ss"));
-
     }
 
-    private Commit getLastCommit(String namespace, String repo, String branch, String token) {
+    private Commit getLastCommit(String namespace, String repo,
+                                 String branch, String token) {
         return gitLabApi(token, api -> {
             try {
-                Project project = api.getProjectApi().getProject(namespace + "/" + repo);
-                return api.getRepositoryApi().getBranch(project.getId(), branch).getCommit();
+                Project project = api.getProjectApi()
+                        .getProject(namespace + "/" + repo);
+                return api.getRepositoryApi()
+                        .getBranch(project.getId(), branch).getCommit();
             } catch (GitLabApiException e) {
-                throw new CodeRepositoryException("Failed get commit project '%s/%s', branch '%s'".formatted(namespace, repo, branch), e);
+                throw new CodeRepositoryException(
+                        "Failed to get last commit '%s/%s' branch '%s'"
+                                .formatted(namespace, repo, branch), e);
             }
         });
     }
 
-    private Commit getCommit(String namespace, String repo, String commit, String token) {
+    private Commit getCommit(String namespace, String repo,
+                             String commit, String token) {
         return gitLabApi(token, api -> {
             try {
-                Project project = api.getProjectApi().getProject(namespace + "/" + repo);
+                Project project = api.getProjectApi()
+                        .getProject(namespace + "/" + repo);
                 return api.getCommitsApi().getCommit(project.getId(), commit);
             } catch (GitLabApiException e) {
-                throw new CodeRepositoryException("Failed get commit project '%s/%s', commit '%s'".formatted(namespace, repo, commit), e);
+                throw new CodeRepositoryException(
+                        "Failed to get commit '%s' in '%s/%s'"
+                                .formatted(commit, namespace, repo), e);
             }
         });
     }
